--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            <p id="box"> <i class="ri-facebook-fill" id="box1"></i><i class="ri-github-fill" id="box2"></i><i class="ri-linkedin-fill" id="box3"></i><i class="ri-instagram-fill" id="box4"></i></p>
                 </div>
           <div id="wrap">
-           <img src="image/mycartoon.jpg"id="image">
+           <img src="WhatsApp Image 2020-06-09 at 10.28.12 PM (4).jpeg"id="image">
           </div>
         </div>
             
