--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@ Developer Student Clubs
     <a id="dsc" href="#"> Core Team Member </a>at BIST</p>
     <div id="logo"><img src="image/logo.png"></div>
     <p id=smally>Session: 2020-2021</p>
+ <p id="dscc">
+Suven Consultants & Technology Pvt. Ltd,
+  <a id="dsc" href="#"> Internship </a>at BIST</p>
+    <div id="logo"><img src="image/intern.jpg"></div>
+    <p id=smally>Mar 2021 - April 2021</p>       
     </div>
  <div class="projects" id="project">
 
