--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Suven Consultants & Technology Pvt. Ltd,
     <p id=smally>Mar 2021 - April 2021</p>       
     </div>
  <div class="projects" id="project">
-Projects
+<div id="exp">Projects</div>
    <p>  <a href="https://github.com/Surekhadhote?tab=repositories" id=res>View Projects<i class="ri-download-2-fill" id="down"></i></a></p>
  </div>
 
