--- a/index.html
+++ b/index.html
@@ -148,16 +148,27 @@ Suven Consultants & Technology Pvt. Ltd,
     <div id="logo"><img src="image/intern.jpg"></div>
     <p id=smally>Mar 2021 - April 2021</p>       
     </div>
- <div class="projects" id="project">
+
+
 <div id="exp">Projects</div>
-   <p>  <a href="https://github.com/Surekhadhote?tab=repositories" id=res>View Projects<i class="ri-download-2-fill" id="down"></i></a></p>
+<p id="dscc">
+    <p>  <a href="https://github.com/Surekhadhote?tab=repositories" id=res>View Projects</a></p>
+    </div>
+
+
+ <div class="projects" id="project">
+
+  
  </div>
+
+<div id="exp">Projects</div>
+<p id="dscc">
+    <a href="#" id=res>Let's Connect :)</a></p></p>
+    </div>
 
  <div class="contact" id="contact">
     </div>
    
-<p>
-                   <a href="#" id=res>Connect with me!!<i class="ri-download-2-fill" id="down"></i></a></p>
 </div>
           
 
