--- a/index.html
+++ b/index.html
@@ -147,24 +147,27 @@ Suven Consultants & Technology Pvt. Ltd,
   <a id="dsc" href="#"> Internship </a></p>
     <div id="logo"><img src="image/intern.jpg"></div>
     <p id=smally>Mar 2021 - April 2021</p>       
+        
+        
+       <p>  <a href="#" id=res>Let's Connect :)</a>
+
+<a href="https://github.com/Surekhadhote?tab=repositories" id=res>View Projects</a></p>
+   
+  
     </div>
 
 
-<div id="exp">Projects</div>
-<p id="dscc">
-    <p>  <a href="https://github.com/Surekhadhote?tab=repositories" id=res>View Projects</a></p>
-    </div>
 
+   
 
  <div class="projects" id="project">
 
   
  </div>
 
-<div id="exp">Projects</div>
-<p id="dscc">
-    <a href="#" id=res>Let's Connect :)</a></p></p>
-    </div>
+
+  
+  
 
  <div class="contact" id="contact">
     </div>
