--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <a href="" id="icon"><i class="ri-facebook-fill" id="box1"></i></a>
                         <a href="https://github.com/Surekhadhote" id="icon"> <i class="ri-github-fill" id="box2"></i></a>
                         <a href="https://www.linkedin.com/in/surekha-dhote-626798187" id="icon"><i class="ri-linkedin-fill" id="box3"></i></a>
-                        <a href="https://www.instagram.com/surekhadhote0002/" id="icon">  <i class="ri-instagram-fill" id="box4"></i></p></a>
-                    
+                        <a href="https://www.instagram.com/surekhadhote0002/" id="icon">  <i class="ri-instagram-fill" id="box4"></i></a>
+                    </p>
                 </div>
           <div id="wrap">
            <img src="image/WhatsApp Image 2020-06-09 at 10.28.12 PM (4).jpeg"id="image">
