--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <a href="https://www.linkedin.com/in/surekha-dhote-626798187"><i class="ri-linkedin-fill" id="box3"></i></a>
                         <a href="https://www.instagram.com/surekhadhote0002/">  <i class="ri-instagram-fill" id="box4"></i></a></p>
                 </div>
-          <div id="wrap">
-           <img src="image/WhatsApp Image 2020-06-09 at 10.28.12 PM (4).jpeg"id="image">
+          <div id="">
+           <img src="image/WhatsApp Image 2020-06-09 at 10.28.12 PM (4).jpeg"id="wrap">
           </div>
         </div>
             
