--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
             <p id="post">Aspiring Software Dev</p>
             <p id="add"> <i class="ri-mail-fill" id="mail"></i>dhotesurekha39@gmail.com</p>
             <p id="adds" ><i class="ri-map-pin-2-fill" id="loc"></i>India, Bhopal</p>
-           <p id="box"> <i class="ri-facebook-fill" id="box1"></i><i class="ri-github-fill" id="box2"></i><i class="ri-linkedin-fill" id="box3"></i><i class="ri-instagram-fill" id="box4"></i></p>
+           <p id="box">
+               <i class="ri-facebook-fill" id="box1" href =""></i>
+               <i class="ri-github-fill" id="box2" href="https://github.com/Surekhadhote"></i>
+               <i class="ri-linkedin-fill" id="box3"></i>
+               <i class="ri-instagram-fill" id="box4"></i>
+             </p>
                 </div>
           <div id="wrap">
            <img src="image/WhatsApp Image 2020-06-09 at 10.28.12 PM (4).jpeg"id="image">
