--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p id="add"> <i class="ri-mail-fill" id="mail"></i>dhotesurekha39@gmail.com</p>
             <p id="adds" ><i class="ri-map-pin-2-fill" id="loc"></i>India, Bhopal</p>
            <p id="box">
-               <i class="ri-facebook-fill" id="box1" href =""></i>
+               <a href=""> <i class="ri-facebook-fill" id="box1"></i></a>
               <a  href="https://github.com/Surekhadhote"> <i class="ri-github-fill" id="box2"></i></a>
              <a href="https://www.linkedin.com/in/surekha-dhote-626798187">  <i class="ri-linkedin-fill" id="box3"></i></a>
                <a href="https://www.instagram.com/surekhadhote0002/"><i class="ri-instagram-fill" id="box4"></i></a>
