--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     </head>
     <body>
+        <style>
 .topnav {
   overflow: hidden;
   background-color: #333;
