--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function myFunction() {
 </script>  
 
         <div id="container">
-         <div id="navi" class="topnav" id="myTopnav">
+         <div  class="topnav" id="myTopnav">
                 <a href="#home" class="nav" >Home</a>
                 <a href="#about" class="nav">About</a>  
                 <a href="#skil" class="nav">Skills</a>
