--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@ function myFunction() {
 
         <div id="container">
          <div  class="topnav" id="myTopnav">
-                <a href="#home" class="nav" >Home</a>
-                <a href="#about" class="nav">About</a>  
-                <a href="#skil" class="nav">Skills</a>
-                <a href="#academics" class="nav">Academics</a>
-                <a href="#exp"class="nav">Experiences</a>
-                <a href="#project"class="nav">Projects</a>
-                <a href="#contact"class="nav">Contact</a>
+                <a href="#home" >Home</a>
+                <a href="#about" >About</a>  
+                <a href="#skil" >Skills</a>
+                <a href="#academics" >Academics</a>
+                <a href="#exp">Experiences</a>
+                <a href="#project">Projects</a>
+                <a href="#contact">Contact</a>
                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
