--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 
         <div id="container">
-         <div  class="nav" id="myTopnav">
+         <div  class="nav" id="navi">
                 <a href="#home" >Home</a>
                 <a href="#about" >About</a>  
                 <a href="#skil" >Skills</a>
