--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p id="color">Hello I'm</p>
             <p id="name">Surekha Dhote</p>
             <p id="post">Aspiring Software Dev</p>
-            <p id="add"> <i class="ri-mail-fill" id="mail"></i>dhotesurekha39@gmail.com</p>
+            <p id="add"> <a class="ri-mail-fill" id="mail"></a>dhotesurekha39@gmail.com</p>
             <p id="adds" ><i class="ri-map-pin-2-fill" id="loc"></i>India, Bhopal</p>
            <p id="box">
                <a href=" "> <i class="ri-facebook-fill" id="box1"></i></a>
