--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <p id="adds" ><i class="ri-map-pin-2-fill" id="loc"></i>India, Bhopal</p>
            <p id="box">
                <a  class="ri-facebook-fill" id="box1"></a>
-              <a  href="https://github.com/Surekhadhote"> <i class="ri-github-fill" id="box2"></i></a>
-             <a href="https://www.linkedin.com/in/surekha-dhote-626798187">  <i class="ri-linkedin-fill" id="box3"></i></a>
-               <a href="https://www.instagram.com/surekhadhote0002/"><i class="ri-instagram-fill" id="box4"></i></a>
+              <a  href="https://github.com/Surekhadhote" class="ri-github-fill" id="box2"></a>
+             <a href="https://www.linkedin.com/in/surekha-dhote-626798187" class="ri-linkedin-fill" id="box3"></a>
+               <a href="https://www.instagram.com/surekhadhote0002/" class="ri-instagram-fill" id="box4"></a>
              </p>
                 </div>
           <div id="wrap">
